--- a/app/page.css
+++ b/app/page.css
@@ -1,3 +1,8 @@
+.app-container {
+    display: grid;
+    justify-content: center;
+}
+
 .MonsterSelector {
     margin-left: 10px;
 }
